fix: balancing whitespace in blockquotes

--- a/docs/assets/mccole.css
+++ b/docs/assets/mccole.css
@@ -237,7 +237,8 @@ div.syllabus {
     border-radius: 4px;
 }
 div.callout > :last-child,
-div.syllabus > :last-child {
+div.syllabus > :last-child,
+blockquote > :last-child {
     margin-bottom: 0;
 }
 
